--- a/run-away/shell/manager.css
+++ b/run-away/shell/manager.css
@@ -69,8 +69,6 @@
 
 /* TAB */
 
-.tab-area {height:33px}
-
 .tab,
 .tab:focus,
 .tab:hover {
@@ -88,6 +86,9 @@
   border-color:#DBCEC9;
   background:white url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAfBAMAAADU57pRAAAAG1BMVEX9+/v7+Pf69fP28Oz////48vD07Ojz6uX17uops5KuAAAAIUlEQVQI12NwYCgAwwQwbABCAygMAEMFKBSAQjgA6nQAABEtBqHudYomAAAAAElFTkSuQmCC') repeat-x 0 0;
 }
+
+.tab abbr,
+.tab dfn {border:none}
 
 
 /* CHECKBOX & RADIO */
@@ -110,6 +111,7 @@ label:hover .radio,
 .editor-toolbar a {
   border:1px solid #DBCEC9;
   background:white url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAfBAMAAADU57pRAAAAG1BMVEX9+/v7+Pf69fP28Oz////48vD07Ojz6uX17uops5KuAAAAIUlEQVQI12NwYCgAwwQwbABCAygMAEMFKBSAQjgA6nQAABEtBqHudYomAAAAAElFTkSuQmCC') repeat-x 0 0;
+  color:#7C0201;
   -webkit-border-radius:3px;
   -moz-border-radius:3px;
   border-radius:3px;
@@ -156,6 +158,7 @@ label:hover .radio,
 }
 
 @media (max-width:580px) {
+  .widget-manager-menu li {width:50%}
   .blog-wrapper .tab-area {height:auto}
   .blog-wrapper .tab {
     float:none;
