--- a/run-away/shell/atom.css
+++ b/run-away/shell/atom.css
@@ -116,7 +116,7 @@ q:after {
 /* GENERAL */
 
 html {
-  font-size:13px;
+  font:normal normal 13px/1.3846153846153846em "Droid Serif",Georgia,"URW Bookman L",Serif;
   overflow-y:scroll;
   overflow-x:hidden;
   -webkit-font-smoothing:antialiased;
@@ -124,7 +124,6 @@ html {
 }
 
 body {
-  font:normal normal 100%/1.3846153846153846em "Droid Serif",Georgia,"URW Bookman L",Serif;
   background-color:#FAF5F2;
   color:#222;
 }
@@ -156,7 +155,8 @@ h6,.h6 {font-size:100%}
 hr {border-top:1px dashed #DBCEC9}
 
 abbr,dfn {cursor:help}
-abbr[title],dfn[title] {border-bottom:1px dotted}
+abbr[title],dfn[title] {border-bottom:1px solid transparent}
+abbr[title]:hover,dfn[title]:hover {border-bottom:1px solid}
 
 
 /* FORM ELEMENTS */
@@ -166,16 +166,17 @@ input,
 select,
 textarea,
 .btn {
-  display:inline-block;
-  width:200px;
   -webkit-box-sizing:border-box;
   -moz-box-sizing:border-box;
   box-sizing:border-box;
+  display:inline-block;
+  width:15.384615384615385em;
   vertical-align:middle;
-  padding:9px;
+  padding:.7692307692307693em;
   margin:0;
   font:inherit;
   line-height:normal;
+  border:none;
   border:1px solid #DBCEC9;
   border-top-color:#BFAFAA;
   background-color:#F5EEEA;
@@ -189,8 +190,8 @@ textarea,
 button {overflow:visible}
 
 select {
-  padding-top:8px;
-  padding-bottom:8px;
+  padding-top:.6923076923076923em;
+  padding-bottom:.6923076923076923em;
 }
 
 .btn-block,
@@ -212,7 +213,7 @@ input::-moz-focus-inner {
 textarea {
   overflow:auto;
   height:auto;
-  min-height:90px;
+  min-height:6.923076923076923em;
   line-height:inherit;
   resize:vertical;
 }
@@ -226,11 +227,21 @@ input[type="submit"],
   text-align:center;
   cursor:pointer;
   background-color:#313131;
+  border-color:transparent;
+  border-bottom-color:rgba(0,0,0,.4);
   text-align:center;
-  text-decoration:none !important;
-  color:white !important;
-  padding:10px 12px;
-  border:none;
+  text-decoration:none;
+  color:white;
+  padding-left:.9230769230769231em;
+  padding-right:.9230769230769231em;
+  background-image:-webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
+  background-image:-moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
+  background-image:-ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
+  background-image:-o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
+  background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
+  -webkit-box-shadow:0 1px 1px rgba(0,0,0,.4);
+  -moz-box-shadow:0 1px 1px rgba(0,0,0,.4);
+  box-shadow:0 1px 1px rgba(0,0,0,.4);
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
@@ -246,13 +257,20 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover,
-.btn:hover {background-color:#353535}
+.btn:hover {
+  background-color:#353535;
+  color:white;
+  text-decoration:none;
+}
+
 button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active,
 .btn:active {
   background-color:#2D2D2D;
+  border-color:transparent;
+  text-decoration:none;
   -webkit-box-shadow:inset 0 2px 1px rgba(0,0,0,.1);
   -moz-box-shadow:inset 0 2px 1px rgba(0,0,0,.1);
   box-shadow:inset 0 2px 1px rgba(0,0,0,.1);
@@ -315,38 +333,28 @@ input[type="submit"]:active,
   opacity:.9;
 }
 
-.btn-small {
-  padding:7px 10px;
-  font-size:86%;
-}
-
+.btn-small,
 .input-small,
+.select-small,
 .textarea-small {
-  padding:7px;
+  padding:.6261180679785331em .7155635062611807em;
   font-size:86%;
 }
 
-.select-small {
-  padding:6px 8px;
-  font-size:86%;
-}
-
-.textarea-small {
-  height:90px;
-  line-height:normal;
-}
+.btn-small {padding:.6261180679785331em .8944543828264758em}
+.select-small {padding:.5366726296958855em .6261180679785331em}
+.textarea-small {line-height:normal}
 
 input[type="checkbox"],
 input[type="radio"] {
-  width:14px;
-  height:14px;
+  width:1.0769230769230769em;
+  height:1.0769230769230769em;
   cursor:pointer;
   background:none;
   border:none;
   margin:0;
   padding:0;
   position:relative;
-  top:-1px;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -362,9 +370,20 @@ input[type="image"] {
   background:none;
 }
 
-option {
+option,
+optgroup {
   margin:0;
   padding:0;
+}
+
+optgroup {
+  font:inherit;
+  font-weight:bold;
+}
+
+optgroup option {
+  margin-left:1em;
+  font-weight:normal;
 }
 
 label {
@@ -374,13 +393,13 @@ label {
   user-select:none;
 }
 
-label input:checked + span {color:black}
+label input:checked + span {opacity:.8}
 
 .form-label,
 .form-static {
   display:block;
-  padding-top:10px;
-  padding-bottom:10px;
+  padding-top:.7692307692307693em;
+  padding-bottom:.7692307692307693em;
   line-height:normal;
 }
 
@@ -494,7 +513,7 @@ iframe {
   border:none;
   background:none;
   width:100%;
-  height:90px;
+  height:6.923076923076923em;
   -webkit-box-sizing:border-box;
   -moz-box-sizing:border-box;
   box-sizing:border-box;
@@ -734,13 +753,13 @@ img {
 /* MESSAGES */
 
 .message {
-  padding:.8em 1em;
+  padding:.7692307692307693em .9230769230769231em;
   background-color:#EEE;
   color:#8F8F8F;
   overflow:hidden;
 }
 
-.message > .fa.fa-fw:first-child {margin-left:-.2em}
+.message > .fa.fa-fw:first-child {margin-left:-.15384615384615385em} /* (width - font-size) / 2 */
 
 .message-success {
   background-color:#EDF5C4;
